[gd_scene load_steps=4 format=3 uid="uid://mu4y835ouw54"]

[ext_resource type="Script" uid="uid://cjnivi3uoydwt" path="res://gdscript/gdscript___thread___wait_to_finish.gd" id="1_iyx3x"]
[ext_resource type="PackedScene" uid="uid://ckhm8mux0nwj5" path="res://addons/godot_play_tool/helper/helper_output.tscn" id="2_nl5no"]
[ext_resource type="PackedScene" uid="uid://cpuuwp2254hm2" path="res://addons/godot_play_tool/helper/helper_code.tscn" id="3_qf3i4"]

[node name="gdscript___thread___wait_to_finish" type="Node2D" node_paths=PackedStringArray("helper_output", "helper_code")]
script = ExtResource("1_iyx3x")
helper_output = NodePath("CanvasLayer/helper_output")
helper_code = NodePath("CanvasLayer/helper_code")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="helper_output" parent="CanvasLayer" instance=ExtResource("2_nl5no")]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -112.0
offset_bottom = 203.0
grow_vertical = 2
allowed_line_count = 30

[node name="helper_code" parent="CanvasLayer" instance=ExtResource("3_qf3i4")]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -593.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 2
